Archive2/2f/6deaf30d726ba0/output
main.c:16:1: error: unknown type name 'bool'
 bool bBreakJob = false;
 ^
main.c:16:18: error: 'false' undeclared here (not in a function)
 bool bBreakJob = false;
                  ^
main.c: In function 'sig_handler':
main.c:27:21: error: 'true' undeclared (first use in this function)
         bBreakJob = true;
                     ^
main.c:27:21: note: each undeclared identifier is reported only once for each function it appears in
main.c: In function 'main':
main.c:46:27: error: unused variable 'oact' [-Werror=unused-variable]
     struct sigaction act, oact;
                           ^
main.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
